- exposed additioal ports by default - added explicit definition to setting redundancy listen port - adjusted all port names with protocol tag prefix

--- a/pubsubplus/templates/solaceConfigMap.yaml
+++ b/pubsubplus/templates/solaceConfigMap.yaml
@@ -51,12 +51,13 @@ data:
     export redundancy_enable=yes
     export configsync_enable=yes
     export redundancy_authentication_presharedkey_key=`cat /mnt/disks/secrets/username_admin_password | awk '{x=$0;for(i=length;i<51;i++)x=x "0";}END{print x}' | base64` # Right-pad with 0s to 50 length
+    export service_redundancy_firstlistenport='8300'
     export redundancy_group_node_${service_name}0_nodetype=message_routing
-    export redundancy_group_node_${service_name}0_connectvia=${service}-0.${service}-discovery.${namespace}.svc
+    export redundancy_group_node_${service_name}0_connectvia=${service}-0.${service}-discovery.${namespace}.svc:${service_redundancy_firstlistenport}
     export redundancy_group_node_${service_name}1_nodetype=message_routing
-    export redundancy_group_node_${service_name}1_connectvia=${service}-1.${service}-discovery.${namespace}.svc
+    export redundancy_group_node_${service_name}1_connectvia=${service}-1.${service}-discovery.${namespace}.svc:${service_redundancy_firstlistenport}
     export redundancy_group_node_${service_name}2_nodetype=monitoring
-    export redundancy_group_node_${service_name}2_connectvia=${service}-2.${service}-discovery.${namespace}.svc
+    export redundancy_group_node_${service_name}2_connectvia=${service}-2.${service}-discovery.${namespace}.svc:${service_redundancy_firstlistenport}
 
     case ${node_ordinal} in
     0)
