--- a/pubsubplus/values.yaml
+++ b/pubsubplus/values.yaml
@@ -52,6 +52,19 @@ serviceAccount:
   # name if specified will be used as service account name - must exist if create=false
   # name:
 
+tls:
+  # Enable TLS, default is false (not enabled)
+  enabled: false
+  #
+  # Name of the Secret that contains the certificates - required if TLS enabled, no default
+  # serverCertificatesSecret: 'example-tls-secret'
+  #
+  # Certificate filename, default tls.crt
+  # certFilename: 'tls.crt'
+  #
+  # Certificate Key filename, default tls.key
+  # certKeyFilename: 'tls.key'
+
 service:
   # service.type specifies how to expose the service: options include ClusterIP, NodePort, LoadBalancer (default if not specified)
   type: LoadBalancer
@@ -66,67 +79,71 @@ service:
       - servicePort: 2222
         containerPort: 2222
         protocol: TCP
-        name: ssh
+        name: tcp-ssh
       - servicePort: 8080
         containerPort: 8080
         protocol: TCP
-        name: semp
+        name: tcp-semp
       - servicePort: 1943
         containerPort: 1943
         protocol: TCP
-        name: semptls
+        name: tls-semp
       - servicePort: 55555
         containerPort: 55555
         protocol: TCP
-        name: smf
+        name: tcp-smf
       - servicePort: 55003
         containerPort: 55003
         protocol: TCP
-        name: smfcomp
+        name: tcp-smfcomp
       - servicePort: 55443
         containerPort: 55443
         protocol: TCP
-        name: smftls
+        name: tls-smf
+      - servicePort: 55556
+        containerPort: 55556
+        protocol: TCP
+        name: tcp-smfroute
       - servicePort: 8008
         containerPort: 8008
         protocol: TCP
-        name: web
+        name: tcp-web
       - servicePort: 1443
         containerPort: 1443
         protocol: TCP
-        name: webtls
-      - servicePort: 5672
-        containerPort: 5672
-        protocol: TCP
-        name: amqp
-      - servicePort: 1883
-        containerPort: 1883
-        protocol: TCP
-        name: mqtt
+        name: tls-web
       - servicePort: 9000
         containerPort: 9000
         protocol: TCP
-        name: rest
-  #   - servicePort: 5671
-  #     containerPort: 5671
-  #     protocol: TCP
-  #     name: amqptls
-  #   - servicePort: 8883
-  #     containerPort: 8883
-  #     protocol: TCP
-  #     name: mqtttls
-  #   - servicePort: 8000
-  #     containerPort: 8000
-  #     protocol: TCP
-  #     name: mqttws
-  #   - servicePort: 8443
-  #     containerPort: 8443
-  #     protocol: TCP
-  #     name: mqttwss
-  #   - servicePort: 9443
-  #     containerPort: 9443
-  #     protocol: TCP
-  #     name: resttls
+        name: tcp-rest
+      - servicePort: 9443
+        containerPort: 9443
+        protocol: TCP
+        name: tls-rest
+      - servicePort: 5672
+        containerPort: 5672
+        protocol: TCP
+        name: tcp-amqp
+      - servicePort: 5671
+        containerPort: 5671
+        protocol: TCP
+        name: tls-amqp
+      - servicePort: 1883
+        containerPort: 1883
+        protocol: TCP
+        name: tcp-mqtt
+      - servicePort: 8883
+        containerPort: 8883
+        protocol: TCP
+        name: tls-mqtt
+      - servicePort: 8000
+        containerPort: 8000
+        protocol: TCP
+        name: tcp-mqttweb
+      - servicePort: 8443
+        containerPort: 8443
+        protocol: TCP
+        name: tls-mqttweb
 
 storage:
   # storage.persistent set to false will use ephemeral storage and the rest of the storage params will be ignored
