--- a/pubsubplus/values.yaml
+++ b/pubsubplus/values.yaml
@@ -12,7 +12,7 @@ solace:
   #  true will create an HA deployment with Primary, Backup and Monitor nodes.
   redundancy: false
 
-  # Deployment scaling tier with max # of connections, see README for valid options
+  # size defines deployment scaling tier with max # of connections, see README for valid options
   #  dev uses minimum resources but performance is not guaranteed; use prod for production-ready
   size: prod100
 
@@ -25,6 +25,20 @@ solace:
 
   # timezone setting for the PubSub+ container, if undefined default is UTC. Valid values are tz database time zone names.
   # timezone: UTC
+
+  # extraEnvVars can be used to add extra environment variables to the PubSub+ container
+  # Important: env variables defined here will not override the ones defined in solaceConfigMap
+  # A primary use case is to specify configuration keys (Note that configuration keys are only evaluated upon initial startup)
+  #  refer to: https://docs.solace.com/Configuring-and-Managing/SW-Broker-Specific-Config/Docker-Tasks/Config-SW-Broker-Container-Cfg-Keys.htm
+  #extraEnvVars:
+  #  - name: env_variable_name
+  #    value: "env_variable_value"
+
+  # extraEnvVarsCM specifies the name of existing ConfigMap containing extra environment variables
+  #extraEnvVarsCM: ""
+
+  # extraEnvVarsSecret specifies the name of existing Secret containing extra environment variables (in case of sensitive data)
+  #extraEnvVarsSecret: ""
 
 image:
   # Default repository is the public Solace DockerHub repo
